2020-10-22  Gavin Smith  <gavinsmith0123@gmail.com>

	Only reference MathJax on those pages which require it.

	* tp/Texinfo/Convert/HTML.pm
	(%defaults): New value 'element_math' to keep track of
	whether @math or @displaymath has been seen in current file.
	(_convert_math_command, _convert_displaymath_command)
	(output): Set and reset 'element_math'.  Process body of
	file before the header to set 'element_math' correctly.
	(file_header_informations): Only reference MathJax scripts
	if 'element_math' is set.
	
	(%defaults): New value 'jslicenses_element' to keep track
	of whether scripts have actually been used in the current output
	file.
	(file_header_information): Update 'jslicenses_element'.
	(_default_end_file): Only output the link to the JS licences page
	if there were actually JS scripts referenced in the file.

2020-10-21  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/XS/parsetexi/Parsetexi.pm (parser): Warn on
	unknown conf value.

2020-10-21  Gavin Smith  <gavinsmith0123@gmail.com>

	Remove ENABLE_ENCODING setting for parser

	* tp/Texinfo/Common.pm (%default_customization_values):
	Remove 'ENABLE_ENCODING'.  This was passed indirectly to
	Texinfo::Convert::Text by Texinfo::Parser, but Texinfo::Parser
	has not depended on Texinfo::Convert::Text since 2016-07-09.

	* tp/t/test_utils.pl, tp/t/test_sort.t:
	Set 'ENABLE_ENCODING' on parser object before sorting indices
	to maintain consistency  in test results.

2020-10-21  Gavin Smith  <gavinsmith0123@gmail.com>

	Remove TEST setting for parser

	* tp/Texinfo/Common.pm (%default_customization_values):
	Remove 'TEST'.
	* tp/Texinfo/ParserNonXS.pm (parse_texi_text, parse_texi_file)
	(parse_texi_line, _end_line):
	Remove code referring to the TEST setting.  This means that
	the 'input_directory' value is always set and all leading
	directory components will be removed from the input file name
	in messages.
	* tp/Texinfo/Convert/HTML.pm (_load_htmlxref_files): Make